iconview: Respect the fixed item width when adjusting the wrap width

Restore the code the way it was in GTK2.

https://bugzilla.gnome.org/show_bug.cgi?id=680953